--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "netflix-mobile",
+  "$schema": "https://json.schemastore.org/package.json",
+  "name": "clima-mobile",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -12,18 +13,21 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.17",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "expo": "~54.0.10",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.7",
+    "expo-location": "~19.0.7",
     "expo-router": "~6.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
